# odete

./: app.py  controle_novo.csv  ctrl_acesso.py  main.py  pyproject.toml  utils.py
pages/: 1_Novo Lançamento.py  2_Editar Lançamentos.py  4_Relatórios.py  5_Backup.py
