[tool.poetry]
name = "odete"
version = "0.1.1"
description = "Sistema para controle financeiro"
authors = ["Lyna Brandi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
